<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/lightgray"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        
        <LinearLayout 
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            
            <ImageView 
                android:layout_width="@dimen/btn_back_width"
                android:layout_height="@dimen/btn_back_height"
                android:layout_marginLeft="@dimen/left"
                android:background="@layout/back_btn"/>
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/left"
                android:text="@string/progector_wareless_bridge"
               	android:textColor="#FF6900"
                android:textSize="18sp"  />
        </LinearLayout>
    </LinearLayout>
    
 	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_line"
        android:orientation="horizontal" >
    </LinearLayout>
    
 	<LinearLayout
 	    android:layout_width="match_parent"
 	    android:layout_height="@dimen/progector_set_vh1"
 	    android:background="#FFFFFF"
 	    android:gravity="center_vertical"
 	    android:orientation="vertical" >

 	    <TextView
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_gravity="center_vertical"
 	        android:layout_marginLeft="@dimen/left"
 	        android:text="@string/progector_net_conn"
 	        android:textColor="@color/lightgray"
 	        android:textSize="12sp" />
 	</LinearLayout>
 
 	<ListView
 	    android:id="@+id/listView1"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content" >
 	</ListView>
 	
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/left"
        android:text="@string/ssid"
        android:textSize="18sp" />
    
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/left"
        android:text="@string/ip_address"
        android:textSize="18sp" />
</LinearLayout>
