<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/lightgray">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/lightgray"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        
        <LinearLayout 
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            
            <ImageView 
                android:layout_width="@dimen/btn_back_width"
                android:layout_height="@dimen/btn_back_height"
                android:layout_marginLeft="@dimen/left"
                android:background="@layout/back_btn"/>
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/left"
                android:text="@string/hdmi_advanced_settings"
               	android:textColor="#FF6900"
                android:textSize="18sp"  />
        </LinearLayout>
    </LinearLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/bg_line" />
	
    
    
    
    
    <RadioGroup
        android:id="@+id/RG"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/b1"
        android:background="@color/white"
        android:orientation="vertical" >
        <RadioButton
            android:id="@+id/radio_shutdown"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
       	    android:layout_marginLeft="10dp"
            
            android:layout_marginRight="10dp"
            android:drawableRight="@drawable/btn_radio"
            android:text="@string/shutdown_hdmi"
            android:textSize="18sp" 
            android:button="@null"          
            android:contentDescription="@string/none" />
        <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/bg_line" />

        <RadioButton
            android:id="@+id/radio_hdmi_in"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
       	    android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawableRight="@drawable/btn_radio"
            android:text="@string/hdmi_in"
             android:textSize="18sp" 
            android:button="@null"
            android:contentDescription="@string/none" />
        <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/bg_line" />
        
        <RadioButton
            android:id="@+id/radio_hdmi_out"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:layout_marginRight="10dp"
            android:drawableRight="@drawable/btn_radio"
           android:text="@string/hdmi_out"
             android:textSize="18sp" 
            android:button="@null"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/none" />
        <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/bg_line" />
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/bg_line" />
    
</LinearLayout>
