<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/lightgray">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:background="@color/lightgray"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="@dimen/btn_back_width"
                    android:layout_height="@dimen/btn_back_height"
                    android:layout_marginLeft="@dimen/left"
                    android:background="@layout/back_btn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left"
                    android:text="@string/keystone_correction"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/bg_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/progector_set_vh2"
            android:background="#FFFFFF" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/left"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/auto_standby_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auto_correction"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <ToggleButton
                android:id="@+id/btn_auto_standby_toggle"
                android:layout_width="@dimen/switch_width"
                android:layout_height="@dimen/switch_height"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/right"
                android:background="@android:color/transparent"
                android:button="@drawable/toggle_btn"
                android:checked="false"
                android:contentDescription="@string/progector_auto_standby"
                android:text=""
                android:textOff=""
                android:textOn="" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:layout_marginRight="@dimen/right"
            android:background="@drawable/bg_line"
            android:orientation="horizontal" >
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/progector_set_vh2"
            android:background="#FFFFFF" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/left"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/unknown_source_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manual_correction"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>
			
             <LinearLayout
                  android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/right"
                android:orientation="horizontal">

            <ImageButton
                android:id="@+id/reduce_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:background="@color/trans"
                android:src="@drawable/indi_left" 
                
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/correction_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:layout_marginRight="20dp"
                android:text="0" />

            <ImageButton
                android:id="@+id/increase_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center"
                android:src="@drawable/indi_right" 
                android:background="@color/trans"
                android:layout_gravity="center_vertical"/>
            
            </LinearLayout>
        </RelativeLayout>
		
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/pop_progect_right"
            android:background="@color/lightgray2"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
